--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
     <footer>
 
-        <li>Designed by <a href="http://w3template.com">W3 Template</a> </li>
+        <li>Proyecto destinado a <a href="https://www.facebook.com/uejic">uejic</a> </li>
 
     </footer>
     <script src="js/jquery.min.js"></script>
