--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
                     <div class="col-md-8 col-sm-10">
                         <div class="subscribe-text">
                             <h3>Descargar version 1.0</h3>
-                            <p>Join our 1000+ subscribers and get access to the latest tools, freebies, product announcements and much more!</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit accusamus deleniti sapiente. Minima quibusdam earum quos voluptatem consequuntur consectetur provident similique! Eius in quia corrupti facere voluptatum iusto
+                                maxime magnam.</p>
                         </div>
                     </div>
                     <div class="col-md-4 text-center"> <a href="#" class="subscribe-button">Descargar ahora</a> </div>
