--- a/index.html
+++ b/index.html
@@ -110,22 +110,22 @@
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="portfolio-item">
-                                <a href="#"> <img class="img-portfolio img-responsive" src="images/portfolio-1.jpg"> </a>
+                                <a href="#"> <img class="img-portfolio img-responsive" src="images/imagen 1.png"> </a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="portfolio-item">
-                                <a href="#"> <img class="img-portfolio img-responsive" src="images/portfolio-2.jpg"> </a>
+                                <a href="images/imagen 2.png"> <img class="img-portfolio img-responsive" src="images/imagen 2.png"> </a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="portfolio-item">
-                                <a href="#"> <img class="img-portfolio img-responsive" src="images/portfolio-3.jpg"> </a>
+                                <a href="#"> <img class="img-portfolio img-responsive" src="images/imagen 3.png"> </a>
                             </div>
                         </div>
                         <div class="col-md-6 col-sm-6">
                             <div class="portfolio-item">
-                                <a href="#"> <img class="img-portfolio img-responsive" src="images/portfolio-4.jpg"> </a>
+                                <a href="#"> <img class="img-portfolio img-responsive" src="images/imagen 4.png"> </a>
                             </div>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                 <div class="row">
                     <div class="col-md-8 col-sm-10">
                         <div class="subscribe-text">
-                            <h3>Descargar version 1.0</h3>
+                            <h3>Descarga la version 1.0</h3>
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit accusamus deleniti sapiente. Minima quibusdam earum quos voluptatem consequuntur consectetur provident similique! Eius in quia corrupti facere voluptatum iusto
                                 maxime magnam.</p>
                         </div>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="about-text">
-                        <p>Donec velit ex, faucibus eu mauris in, sodales placerat augue. Phasellus feugiat ex id enim laoreet mattis. Quisque velit quam, pharetra non lorem vel, scelerisque ornare dolor. Etiam id ex justo. Nullam nec ipsum non augue convallis
+                        <p>Donec veit ex, faucibus eu mauris in, sodales placerat augue. Phasellus feugiat ex id enim laoreet mattis. Quisque velit quam, pharetra non lorem vel, scelerisque ornare dolor. Etiam id ex justo. Nullam nec ipsum non augue convallis
                             gravida. Praesent mattis placerat sodales. Pellentesque nec egestas neque. </p>
                         <p>Donec velit ex, faucibus eu mauris in, sodales placerat augue. Phasellus feugiat ex id enim laoreet mattis. Quisque velit quam, pharetra non lorem vel, scelerisque ornare dolor. Etiam id ex justo. Nullam nec ipsum non augue convallis
                             gravida. Praesent mattis placerat sodales. Pellentesque nec egestas neque. </p>
