--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <img src=".//images/memory color unido .png" height="60%" width="60%"></img>
                         <!-- <h2 id="titul">MEMORY <span>COLOR</span></h2>-->
 
-                        <p>queloque</p>
+                        <p></p>
                         <a href="MemoryColorOriginal.apk" class="banner-button">Descargar ahora</a> </div>
                 </div>
             </div>
@@ -178,8 +178,8 @@
                     <div class="col-md-8 col-sm-10">
                         <div class="subscribe-text">
                             <h3>Descarga la version 1.0</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit accusamus deleniti sapiente. Minima quibusdam earum quos voluptatem consequuntur consectetur provident similique! Eius in quia corrupti facere voluptatum iusto
-                                maxime magnam.</p>
+                            <p>Esta versión fue inspirada en el juego clásico memorama. Su particularidad es la distinción de colores; además, consta de un cronometro con el objetivo de desarrollar la agilidad visual. Su instalación solo es disponinble para
+                                dispositivos android.</p>
                         </div>
                     </div>
                     <div class="col-md-4 text-center"> <a href="#" class="subscribe-button">Descargar ahora</a> </div>
