--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>MEMORY COLOR</title>
+    <title>Color Family</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/simple-linenavbar-brandicons.css" />
@@ -33,7 +33,7 @@
                 <div class="navbar-header">
 
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                    <a class="navbar-brand" href="#">Memory Color</a>
+                    <a class="navbar-brand" href="#">Color Family</a>
 
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="col-md-12">
 
-                        <img src=".//images/memory color unido .png" height="60%" width="60%"></img>
+                        <img src=".//images/nuevo titulo.png" height="60%" width="60%"></img>
                         <!-- <h2 id="titul">MEMORY <span>COLOR</span></h2>-->
 
                         <p></p>
@@ -106,7 +106,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center text">
-                    <h3></h3>
+                    <h3>Mini historia</h3>
                     <div class="row">
                         <div class="col-md-6 col-sm-6">
                             <div class="portfolio-item">
