--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,100,200,300,500,600,800,900' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" href="images/LOGO MEMORY COLOR.png">
+    <link rel="shortcut icon" href="images/">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -39,7 +39,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="#banner">Descarga</a></li>
-                        <li><a href="#work">Educación</a></li>
+                        <li><a href="#work">Mini historia</a></li>
                         <li><a href="#testimonials">Habilidades</a></li>
                         <li><a href="#about">Acerca de</a></li>
 
@@ -58,7 +58,7 @@
                         <!-- <h2 id="titul">MEMORY <span>COLOR</span></h2>-->
 
                         <p></p>
-                        <a href="MemoryColorOriginal.apk" class="banner-button">Descargar ahora</a> </div>
+                        <a href="Color_Family.apk" class="banner-button">Descargar ahora</a> </div>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
                         </div>
                         <div class="feature-text media-body">
                             <h4>Elementum laoreet</h4>
-                            <p class="feature-detail">Enfocado a generar destreza cognitiva enss publico general.</p>
+                            <p class="feature-detail">Enfocado a generar destreza cognitiva a publico general.</p>
                         </div>
                     </div>
                 </div>
@@ -148,20 +148,19 @@
                 <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
                     <div id="owl-demo" class="owl-carousel owl-theme test">
                         <div class="item">
-                            <p><sup><i class="fa fa-quote-left"></i></sup>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dui ante, ornare eget est in, ultricies rutrum elit.<sup><i class="fa fa-quote-right"></i></sup></p>
+                            <p><sup><i class="fa fa-quote-left"></i></sup>Cada uno tiene el máximo de memoria para lo que le interesa y el mínimo para lo que no le interesa.<sup><i class="fa fa-quote-right"></i></sup></p>
                             <div class="test-img"> <img src="images/team-img-01.png" />
-                                <p><strong>Leonard</strong></p>
+                                <p><strong>Arthur</strong></p>
                             </div>
                         </div>
                         <div class="item">
-                            <p><sup><i class="fa fa-quote-left"></i></sup>Proin tincidunt, orci vel volutpat blandit, purus turpis faucibus massa, sit amet posuere nunc diam in ex.<sup><i class="fa fa-quote-right"></i></sup></p>
+                            <p><sup><i class="fa fa-quote-left"></i></sup>Tenía tan mala memoria que se olvidó de que tenía mala memoria y se acordó de todo.<sup><i class="fa fa-quote-right"></i></sup></p>
                             <div class="test-img"> <img src="images/team-img-02.png" />
-                                <p><strong>Tony</strong></p>
+                                <p><strong>Ramón</strong></p>
                             </div>
                         </div>
                         <div class="item">
-                            <p><sup><i class="fa fa-quote-left"></i></sup>Morbi velit mauris, hendrerit in convallis vel, laoreet et orci. Integer semper, est vel congue suscipit, nisl nibh convallis lorem, sit amet faucibus purus lacus eu nulla. Sed nec
-                                blandit ante, sed semper tellus.<sup><i class="fa fa-quote-right"></i></sup></p>
+                            <p><sup><i class="fa fa-quote-left"></i></sup>Tu ser es creado por tus recuerdos .<sup><i class="fa fa-quote-right"></i></sup></p>
                             <div class="test-img"> <img src="images/team-img-03.png" />
                                 <p><strong>Scarlet</strong></p>
                             </div>
@@ -182,7 +181,7 @@
                                 dispositivos android.</p>
                         </div>
                     </div>
-                    <div class="col-md-4 text-center"> <a href="#" class="subscribe-button">Descargar ahora</a> </div>
+                    <div class="col-md-4 text-center"> <a href="MemoryColorOriginal.apk" class="subscribe-button">Descargar ahora</a> </div>
                 </div>
             </div>
         </div>
