--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,100,200,300,500,600,800,900' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" href="images/">
+    <link rel="shortcut icon" href="images/logoparaapp.png">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -58,7 +58,7 @@
                         <!-- <h2 id="titul">MEMORY <span>COLOR</span></h2>-->
 
                         <p></p>
-                        <a href="Color_Family.apk" class="banner-button">Descargar ahora</a> </div>
+                        <a href="Color_Family_original.apk" class="banner-button">Descargar ahora</a> </div>
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@
                         <div class="icon-box text-center pull-left media-object"> <img src="./images/ojo.png" class="icon-bulb" width="100%"></img>
                         </div>
                         <div class="feature-text media-body">
-                            <h4>Elementum laoreet</h4>
+                            <h4>Elementos</h4>
                             <p class="feature-detail">Diseñado para contribuir de manera optima el desarrollo pensativo y agilidad visual.</p>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                         <div class="icon-box text-center pull-left media-object"> <img src="./images/cerebro.png" class="icon-eye" width="100%"></img>
                         </div>
                         <div class="feature-text media-body">
-                            <h4>Elementum laoreet</h4>
+                            <h4>Elementos</h4>
                             <p class="feature-detail">Capáz de proporcionar ayuda a nivel didactico con la finalidad de elevar la capacidad de memorización.</p>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <div class="icon-box text-center pull-left media-object"> <img src=./images/cabeza.png class="icon-heart" width="100%"></img>
                         </div>
                         <div class="feature-text media-body">
-                            <h4>Elementum laoreet</h4>
+                            <h4>Elementos</h4>
                             <p class="feature-detail">Enfocado a generar destreza cognitiva a publico general.</p>
                         </div>
                     </div>
@@ -148,19 +148,20 @@
                 <div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
                     <div id="owl-demo" class="owl-carousel owl-theme test">
                         <div class="item">
-                            <p><sup><i class="fa fa-quote-left"></i></sup>Cada uno tiene el máximo de memoria para lo que le interesa y el mínimo para lo que no le interesa.<sup><i class="fa fa-quote-right"></i></sup></p>
+                            <p><sup><i class="fa fa-quote-left"></i></sup>Mejora la concentración: realmente cada jugador debe tener sus ojos bien abiertos y eliminar los distractores para detectar las coincidencias entre las piezas y así armar las parejas.<sup><i class="fa fa-quote-right"></i></sup></p>
                             <div class="test-img"> <img src="images/team-img-01.png" />
                                 <p><strong>Arthur</strong></p>
                             </div>
                         </div>
                         <div class="item">
-                            <p><sup><i class="fa fa-quote-left"></i></sup>Tenía tan mala memoria que se olvidó de que tenía mala memoria y se acordó de todo.<sup><i class="fa fa-quote-right"></i></sup></p>
+                            <p><sup><i class="fa fa-quote-left"></i></sup>Aumenta la atención: el que se distrae en este juego, pierde. El estímulo de identificar parejas permite centralizar la atención y mantenerse enfocado.<sup><i class="fa fa-quote-right"></i></sup></p>
                             <div class="test-img"> <img src="images/team-img-02.png" />
                                 <p><strong>Ramón</strong></p>
                             </div>
                         </div>
                         <div class="item">
-                            <p><sup><i class="fa fa-quote-left"></i></sup>Tu ser es creado por tus recuerdos .<sup><i class="fa fa-quote-right"></i></sup></p>
+                            <p><sup><i class="fa fa-quote-left"></i></sup>Ayuda a pensar rápido: es un juego contrarreloj. Es necesario hacer relaciones de forma eficiente y acelerar la agilidad mental para que tanto los esfuerzos de concentración como de
+                                memoria visual rindan frutos.<sup><i class="fa fa-quote-right"></i></sup></p>
                             <div class="test-img"> <img src="images/team-img-03.png" />
                                 <p><strong>Scarlet</strong></p>
                             </div>
@@ -203,14 +204,14 @@
                 <div class="col-md-6">
                     <div class="col-md-6 col-sm-6 col-xs-6 block">
                         <div class="counter-item text-center">
-                            <h5>Our Clients</h5>
-                            <div class="timer" data-from="0" data-to="55" data-speed="5000" data-refresh-interval="50"></div>
+                            <h5>Tiempo record</h5>
+                            <div class="timer" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-6">
                         <div class="counter-item text-center">
-                            <h5>Projects completed</h5>
-                            <div class="timer" data-from="0" data-to="88" data-speed="5000" data-refresh-interval="50"></div>
+                            <h5>Puntaje</h5>
+                            <div class="timer" data-from="0" data-to="10" data-speed="5000" data-refresh-interval="50"></div>
                         </div>
                     </div>
                 </div>
